tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c
/* Generated by re2c 1.0.1 on Tue Feb 23 17:07:57 2021 */
#line 1 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
#include "../tdr_xlsx_reader.h"
#include "tdr_xlsx_reader_workbook_rels_l.h"
#include <string.h>

#define YYGETCONDITION()  self->scanner.state
#define YYSETCONDITION(s) self->scanner.state = s
#define STATE(name)  yyc##name
#define BEGIN(state) YYSETCONDITION(STATE(state))
#define YYCURSOR self->scanner.cursor
#define YYLIMIT self->scanner.limit
#define YYMARKER self->scanner.marker
#define YYCTYPE char

const char* tdr_xlsx_reader_workbook_rels_search_file(tdr_xlsx_reader_t *self, const char* rid)
{
	const char* target_begin = NULL;
	const char* rid_begin = NULL;

	self->scanner.cursor = self->workbook_rels_buff;
	self->scanner.limit = self->workbook_rels_buff + self->workbook_rels_buff_size;
	self->scanner.marker = NULL;	
	self->scanner.state = yycINITIAL;

restart:
	if(YYCURSOR >= YYLIMIT)
	{
		return NULL;
	}

#line 33 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
{
	YYCTYPE yych;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	case yycIN_RELATIONSHIPS: goto yyc_IN_RELATIONSHIPS;
	}
/* *********************************** */
yyc_INITIAL:
	yych = *YYCURSOR;
	switch (yych) {
	case '<':	goto yy5;
	default:	goto yy3;
	}
yy3:
	++YYCURSOR;
yy4:
#line 71 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{ goto restart;				}
#line 52 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '/':	goto yy6;
	case 'r':	goto yy8;
	default:	goto yy4;
	}
yy6:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy9;
	default:	goto yy7;
	}
yy7:
	YYCURSOR = YYMARKER;
	goto yy4;
yy8:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy10;
	default:	goto yy7;
	}
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy11;
	default:	goto yy7;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy12;
	default:	goto yy7;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy13;
	default:	goto yy7;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy14;
	default:	goto yy7;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy15;
	default:	goto yy7;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy16;
	default:	goto yy7;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy17;
	default:	goto yy7;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy18;
	default:	goto yy7;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy19;
	default:	goto yy7;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy20;
	default:	goto yy7;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy21;
	default:	goto yy7;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy22;
	default:	goto yy7;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy23;
	default:	goto yy7;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy24;
	default:	goto yy7;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy25;
	default:	goto yy7;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy26;
	default:	goto yy7;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy27;
	default:	goto yy7;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy28;
	default:	goto yy7;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy29;
	default:	goto yy7;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy30;
	default:	goto yy7;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy31;
	default:	goto yy7;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy32;
	default:	goto yy7;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy34;
	default:	goto yy7;
	}
yy32:
	++YYCURSOR;
#line 33 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{
	while(*YYCURSOR != '>')
		++YYCURSOR;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	BEGIN(IN_RELATIONSHIPS);
	goto restart;
}
#line 224 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case '>':	goto yy35;
	default:	goto yy7;
	}
yy35:
	++YYCURSOR;
#line 70 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{ BEGIN(INITIAL);				}
#line 235 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
/* *********************************** */
yyc_IN_RELATIONSHIPS:
	yych = *YYCURSOR;
	switch (yych) {
	case '>':	goto yy41;
	case 'i':	goto yy43;
	case 't':	goto yy44;
	default:	goto yy39;
	}
yy39:
	++YYCURSOR;
yy40:
#line 71 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{ goto restart;				}
#line 250 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
yy41:
	++YYCURSOR;
#line 62 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{ 
	if(strcmp(rid_begin, rid) == 0)
		return target_begin;

	target_begin = NULL;
	rid_begin = NULL;
	goto restart;
}
#line 262 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
yy43:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'd':	goto yy45;
	default:	goto yy40;
	}
yy44:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy47;
	default:	goto yy40;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy48;
	default:	goto yy46;
	}
yy46:
	YYCURSOR = YYMARKER;
	goto yy40;
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy49;
	default:	goto yy46;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy50;
	default:	goto yy46;
	}
yy49:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'g':	goto yy52;
	default:	goto yy46;
	}
yy50:
	++YYCURSOR;
#line 52 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{
	rid_begin = YYCURSOR;
	while(*YYCURSOR != '\"')
		++YYCURSOR;
	*YYCURSOR = 0;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	goto restart;
}
#line 314 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy53;
	default:	goto yy46;
	}
yy53:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy54;
	default:	goto yy46;
	}
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy55;
	default:	goto yy46;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case '"':	goto yy56;
	default:	goto yy46;
	}
yy56:
	++YYCURSOR;
#line 42 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"
	{
	target_begin = YYCURSOR;
	while(*YYCURSOR != '\"')
		++YYCURSOR;
	*YYCURSOR = 0;
	++YYCURSOR;
	YYMARKER = YYCURSOR;
	goto restart;
}
#line 351 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/gen/tdr_xlsx_reader_workbook_rels_l.c"
}
#line 72 "/home/merlin/workspace/TDR-Merlin/tdr/protocol/tdr_xlsx_reader_workbook_rels_l.re"

}
